# Mobydack.tasks

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  README.org  dev-enviroment.yaml  go.mod
.github/workflows/: test.yaml
notes/math/: herons_method.md  herons_method.org
submodules/: CMakeLists.txt
tasks/: CMakeLists.txt
tasks/food_lines/: README.org
tasks/food_lines/langs/c/: CMakeLists.txt  food_lines.c  food_lines.h  food_lines_test.c
tasks/is_unique_array/: README.org
tasks/is_unique_array/langs/c/: CMakeLists.txt  is_unique_array.c  is_unique_array.h  is_unique_array_test.c
tasks/snowflakes/: README.org
tasks/snowflakes/langs/c/: CMakeLists.txt  snowflakes.c  snowflakes.h  snowflakes_test.c
tasks/sqrt/: README.md  README.org
tasks/sqrt/langs/go/: sqrt.go  sqrt_test.go
